@@ -46,8 +46,8 @@ os_mmap(ham_fd_t fd, ham_fd_t *mmaph, ham_offset_t position,
 {
     ham_status_t st;
     DWORD hsize, fsize=GetFileSize(fd, &hsize);
-    DWORD protect=PAGE_WRITECOPY | (readonly ? PAGE_READONLY : PAGE_READWRITE);
-    DWORD access =FILE_MAP_COPY  | (readonly ? FILE_MAP_READ : FILE_MAP_WRITE);
+    DWORD protect=PAGE_WRITECOPY; /* | (readonly ? PAGE_READONLY : PAGE_READWRITE); */
+    DWORD access =FILE_MAP_COPY;  /* | (readonly ? FILE_MAP_READ : FILE_MAP_WRITE); */
 
     *mmaph=CreateFileMapping(fd, 0, protect,  hsize, fsize, 0); 
     if (!*mmaph) {
